@@ -8,11 +8,12 @@ import com.bashkir777.api.dto.OrdenDTO;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.stereotype.Repository;
+import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
-@Repository
+@Service
 @RequiredArgsConstructor
 public class OrdenService {
 
@@ -24,7 +25,7 @@ public class OrdenService {
     }
 
     public OperationInfo createOrden(String ordenTitle) throws IllegalArgumentException {
-        if(ordenTitle.length() < 7){
+        if (ordenTitle.length() < 7) {
             throw new IllegalArgumentException("orden title must be at least 7 characters");
         }
         var orden = new Orden();
@@ -37,7 +38,7 @@ public class OrdenService {
     public OperationInfo patchOrden(OrdenDTO ordenDTO) throws IllegalArgumentException {
         assert ordenDTO.getId() != null;
         var existingOrden = this.getOrdenById(ordenDTO.getId());
-        if(ordenDTO.getTitle().length() < 7){
+        if (ordenDTO.getTitle().length() < 7) {
             throw new IllegalArgumentException("orden title must be at least 7 characters");
         }
         existingOrden.setTitle(ordenDTO.getTitle());
@@ -46,20 +47,23 @@ public class OrdenService {
     }
 
     public Orden getOrdenById(long id) throws IllegalArgumentException {
-        return ordenRepository.findOrdenById(id).
-                orElseThrow(()-> new IllegalArgumentException("orden with id " + id + " not found"));
+        return ordenRepository.findOrdenById(id)
+                .orElseThrow(() -> new IllegalArgumentException("orden with id " + id + " not found"));
     }
 
     public List<OrdenDTO> getAllOrdens() {
-        return ordenRepository.findAll().stream().map(orden -> OrdenDTO.builder().
-                id(orden.getId()).title(orden.getTitle()).
-                createdBy(orden.getCreatedBy().getUsername()).build()).toList();
+        return ordenRepository.findAll().stream()
+                .map(orden -> OrdenDTO.builder()
+                        .id(orden.getId())
+                        .title(orden.getTitle())
+                        .createdBy(orden.getCreatedBy().getUsername())
+                        .build())
+                .collect(Collectors.toList());
     }
 
-    public OperationInfo deleteOrden(long id) throws IllegalArgumentException{
+    public OperationInfo deleteOrden(long id) throws IllegalArgumentException {
         getOrdenById(id); // throw exception if orden does not exist
         ordenRepository.deleteById(id);
         return new OperationInfo(true, "Orden deleted successfully");
     }
-
 }
